# Template_Factory

./: CMakeLists.txt
include/: factory.h  type_util.h
test/: factory_test.cpp  test.cpp
